# fasthtml-extn

./: .sesskey  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/basic_app/: main.py
examples/basic_app/app/: layout.py  page.py
examples/metacall_faas/: main.py  requirements.txt
examples/metacall_faas/app/: exception.py  layout.py  page.py
examples/metacall_faas/app/counter/: page.py
examples/multiple_layouts/app/: exception.py  layout.py  not_found.py
examples/multiple_layouts/app/about/: layout.py
examples/multiple_layouts/app/about/project/: layout.py  page.py
examples/multiple_layouts/app/counter/: page.py
examples/without_app_folder/: README.md
fasthtml-next/: components.py  main.py  utils.py
fasthtml_extn/: __init__.py  components.py  deploy.py  utils.py
fasthtml_extn/libraries/: icons.py  tailwind.py
tests/: test_application.py  test_utils.py  test_utils_get_module.py  test_utils_get_path_and_route.py
