[tool.poetry]
name = "fasthtml_extn"
version = "0.0.4"
description = "An fasthtml extension framework to build webapps using python."
authors = ["Jose Antonio Dominguez <chamot11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
